# lattent

./: .gitignore  pyproject.toml
src/lattent/: __init__.py  jax.py  pytorch.py
src/lattent/dataloader/: language_modeling_hf.py  tokenization.py
src/lattent/infra/: checkpoint.py  optimizers.py
src/lattent/models/: model.py  ttt_layer.py
